<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, TelnetActivity!</string>
    <string name="app_name">Remote</string>
    <string name="b2txt">Button2</string>
    <string name="bt_power">Power</string>
    <string name="bt_setup">Setup</string>
    <string name="bt_pgup">PgUp</string>
    <string name="bt_pgdn">PgDn</string>
    <string name="bt_eject">Eject</string>
    <string name="bt_tvmode">TvMode</string>
    <string name="bt_mute">Mute</string>
    <string name="bt_1">1</string>
    <string name="bt_2">2</string>
    <string name="bt_3">3</string>
    <string name="bt_4">4</string>
    <string name="bt_5">5</string>
    <string name="bt_6">6</string>
    <string name="bt_7">7</string>
    <string name="bt_8">8</string>
    <string name="bt_9">9</string>
    <string name="bt_0">0</string>
    <string name="bt_delete">delete</string>
    <string name="bt_caps">cap/num</string>
    <string name="bt_up">up</string>
    <string name="bt_down">down</string>
    <string name="bt_left">left</string>
    <string name="bt_right">right</string>
    <string name="bt_home">home</string>
    <string name="bt_return">return</string>
    <string name="bt_source">source</string>
    <string name="bt_info">info</string>
    <string name="bt_ok">ok</string>
    <string name="bt_menu">menu</string>
    <string name="bt_prev">prev</string>
    <string name="bt_play">play</string>
    <string name="bt_next">next</string>
    <string name="bt_title">title</string>
    <string name="bt_rev">rev</string>
    <string name="bt_stop">stop</string>
    <string name="bt_fwd">fwd</string>
    <string name="bt_repeat">rep</string>
    <string name="bt_angle">angle</string>
    <string name="bt_pause">pause</string>
    <string name="bt_slow">slow</string>
    <string name="bt_seek">seek</string>
    <string name="bt_audio">audio</string>
    <string name="bt_subtitle">subt.</string>
    <string name="bt_zoom">zoom</string>
    <string name="bt_red">red</string>
    <string name="bt_green">green</string>
    <string name="bt_yellow">yellow</string>
    <string name="bt_blue">blue</string>
        <string name="btc_power">210</string>
    <string name="btc_setup">140</string>
    <string name="btc_pgup">158</string>
    <string name="btc_pgdn">159</string>
    <string name="btc_eject">239</string>
    <string name="btc_tvmode">143</string>
    <string name="btc_mute">225</string>
    <string name="btc_1">242</string>
    <string name="btc_2">243</string>
    <string name="btc_3">244</string>
    <string name="btc_4">245</string>
    <string name="btc_5">246</string>
    <string name="btc_6">247</string>
    <string name="btc_7">248</string>
    <string name="btc_8">249</string>
    <string name="btc_9">250</string>
    <string name="btc_0">241</string>
    <string name="btc_delete">08</string>
    <string name="btc_caps">252</string>
    <string name="btc_up">168</string>
    <string name="btc_down">169</string>
    <string name="btc_left">170</string>
    <string name="btc_right">171</string>
    <string name="btc_home">208</string>
    <string name="btc_return">141</string>
    <string name="btc_source">221</string>
    <string name="btc_info">149</string>
    <string name="btc_ok">13</string>
    <string name="btc_menu">09</string>
    <string name="btc_prev">219</string>
    <string name="btc_play">233</string>
    <string name="btc_next">220</string>
    <string name="btc_title">148</string>
    <string name="btc_rev">213</string>
    <string name="btc_stop">27</string>
    <string name="btc_fwd">214</string>
    <string name="btc_repeat">144</string>
    <string name="btc_angle">236</string>
    <string name="btc_pause">234</string>
    <string name="btc_slow">217</string>
    <string name="btc_seek">145</string>
    <string name="btc_audio">216</string>
    <string name="btc_subtitle">235</string>
    <string name="btc_zoom">218</string>
    <string name="btc_red">222</string>
    <string name="btc_green">223</string>
    <string name="btc_yellow">224</string>
    <string name="btc_blue">226</string>
    <string name="btl_remote1">buttonListener</string>
    <string name="menui_start">start</string>
    <string name="menui_stop">stop</string>
</resources>
